-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.2
-
None
-
-
64b852e18 (11.0)
The terminal starts with a couple of environment variables set that should not be set: "LANG, LC_ALL, LC_CTYPE"
- relates to
-
QTCREATORBUG-29372 Terminal showing English instead of system's language
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-29515 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
497696,6 | Terminal: Fix default environment vars | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |